# SimAgent

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GUIDE.md  LICENSE  README.md  list.md  plan.md  pyproject.toml
agent/: README.md  package-lock.json  package.json  tsconfig.json
agent/src/: cli.ts  controller.ts  index.ts  kernel-client.ts  runtime.ts  service.ts  tools.ts
agent/test/: controller.test.ts  pi-integration.test.ts
docs/: P0_PI_SPIKE_REPORT.md
src/simagent/: __init__.py  agent.py  answer.py  cli.py  kernel_transport.py  lean_check.py  llm.py  pi_agent.py  pipeline.py  play.py  proof.py  search.py  spec.py  trace.py
src/simagent/core/: __init__.py  claim.py  derive.py  entity.py  expr.py  journal.py  measure.py  op.py  space.py
src/simagent/sandbox/: __init__.py  certify.py  geometry.py  leangen.py  scene.py  sos.py
src/simagent/views/: __init__.py  _style.py  field.py  ghost.py  identity.py  sweep.py  trajectory.py
src/simagent/visualize/: __init__.py  manim_gen.py  mpl.py
src/simagent/web/: app.py  session.py
src/simagent/web/static/: app.js  index.html
tests/: test_agent.py  test_claims.py  test_core_ops.py  test_core_space.py  test_expr.py  test_geometry.py  test_geometry_kit.py  test_hardening.py  test_journal.py  test_kernel_transport.py  test_layering.py  test_notebook.py  test_pi_cli.py  test_pipeline.py  test_play.py  test_proof.py  test_search.py  test_sos.py  test_trace.py  test_views_imagine.py  test_web.py
