[project]
name = "simagent"
version = "0.1.0"
description = "Sandbox-first harness for math conjectures: simulate, visualize in 3D, search for counterexamples/witnesses, then formalize (LaTeX + Lean)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "sympy>=1.12",
    "matplotlib>=3.8",
    "anthropic>=0.116",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
viz = ["manim>=0.18"]

[project.scripts]
simagent = "simagent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
